# AgenticRag

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  setup.sh
.cursor/plans/: finqa_chatbot_architecture_9a338ce5.plan.md
configs/: eval.yaml  l4.yaml  l4_fino1.yaml  t4.yaml
docs/: ABLATIONS.md  ARCHITECTURE.md  GPU_BENCHMARK.md  PRODUCTION.md  TECHNICAL_REPORT.md
ops/grafana/: finqa_dashboard.json
ops/prometheus/: prometheus.yml
src/finqa_bot/: __init__.py  cli.py  config.py  logging.py  types.py
src/finqa_bot/data/: __init__.py  chunking.py  downloader.py  sample.py
src/finqa_bot/eval/: __init__.py  ablations.py  finqa_metric.py  gpu_benchmark.py  harness.py  program_metric.py  slices.py
src/finqa_bot/execution/: __init__.py  dsl.py  executor.py  numbers.py
src/finqa_bot/graph/: __init__.py  graph.py  nodes.py  prompts.py  router.py  state.py
src/finqa_bot/monitoring/: __init__.py  calibration.py  drift.py  metrics.py
src/finqa_bot/retrieval/: __init__.py  embedder.py  hybrid.py  indexer.py  reranker.py  scale_extractor.py
src/finqa_bot/serving/: __init__.py  openai_client.py  vllm_launcher.py
src/finqa_bot/ui/: __init__.py  api.py  gradio_app.py
src/finqa_bot/verification/: __init__.py  groundedness.py  units.py
tests/: conftest.py  test_api_stream.py  test_chunking.py  test_dsl_executor.py  test_gradio_app.py  test_groundedness.py  test_monitoring.py  test_program_metric.py  test_reranker.py  test_retrieval_recall.py  test_scale_extractor.py  test_smoke.py  test_typed_output.py
